fix circle alignment in bookmarks

--- a/src/modules/Features/Rainbow-File-Browser/simplerainbow.scss
+++ b/src/modules/Features/Rainbow-File-Browser/simplerainbow.scss
@@ -5,11 +5,7 @@
 	// Apply styling to titles
 	&.anp-simple-rainbow-title-toggle {
 		.nav-folder.mod-root > .nav-folder-children > .nav-folder .nav-folder-title,
-		[data-type="bookmarks"]
-			> .view-content
-			> div
-			> .tree-item
-			.tree-item-inner {
+		[data-type="bookmarks"] .tree-item .tree-item-inner {
 			transition: color 0.4s;
 			color: rgba(
 				var(--rainbow-folder-color),
@@ -21,15 +17,8 @@
 	}
 	// Circle icon indicator
 	&.anp-simple-rainbow-icon-toggle {
-		.nav-folder.mod-root
-			> .nav-folder-children
-			> .nav-folder
-			.nav-folder-title:after,
-		[data-type="bookmarks"]
-			> .view-content
-			> div
-			> .tree-item
-			.tree-item-inner:after {
+		.nav-folder.mod-root > .nav-folder-children > .nav-folder .nav-folder-title:after,
+		[data-type="bookmarks"] .tree-item .tree-item-inner:after {
 			transition: color 0.4s;
 			color: rgba(
 				var(--rainbow-folder-color),
@@ -40,16 +29,19 @@
 			position: relative;
 			margin-left: 4px;
 			opacity: 0.5;
+			top: -0.5px
+		}
+		[data-type="bookmarks"] .tree-item .tree-item-inner {
+		    align-items: center;
+		    display: flex;
+		    flex-grow: 1;
+		    justify-content: space-between;
 		}
 	}
 	// Color indents
 	&.anp-simple-rainbow-indentation-toggle {
 		.nav-folder.mod-root .nav-folder > .nav-folder-children,
-		[data-type="bookmarks"]
-			> .view-content
-			> div
-			> .tree-item
-			.tree-item-children {
+		[data-type="bookmarks"] .tree-item .tree-item-children {
 			transition: color 0.4s;
 			border-color: rgba(var(--rainbow-folder-color), 0.5);
 		}
